src/human_study/program_49/python_err_msg.txt
File "./seq2parse/human_study/program_49/original.py", line 3
    print "List : ", aList
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
